--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		</plugins>
 	</build>
 	<scm>
-		<developerConnection>scm:git:https://github.com/Santy288/my-pet-clinic.git</developerConnection>
+		<developerConnection>scm:git:https://Santy288@github.com/Santy288/my-pet-clinic.git</developerConnection>
 	  <tag>my-pet-clinic-0.0.1</tag>
   </scm>
 </project>
