--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,25 @@
 #release configuration
-#Fri Apr 22 12:10:28 CEST 2022
+#Fri Apr 22 12:33:50 CEST 2022
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
+scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
+releaseStrategyId=default
+scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
+project.scm.guru.springframework\:pet-clinic-data.empty=true
+pinExternals=false
 completedPhase=check-poms
-scm.url=scm\:git\:https\://github.com/Santy288/my-pet-clinic.git
+scm.url=scm\:git\:https\://Santy288@github.com/Santy288/my-pet-clinic.git
+scm.developmentCommitComment=@{prefix} prepare for next development iteration
+project.scm.guru.springframework\:my-pet-clinic.connection=scm\:git\:https\://Santy288@github.com/Santy288/my-pet-clinic.git
+project.scm.guru.springframework\:my-pet-clinic.developerConnection=scm\:git\:https\://Santy288@github.com/Santy288/my-pet-clinic.git
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+scm.password=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
+project.scm.guru.springframework\:pet-clinic-web.empty=true
 exec.snapshotReleasePluginAllowed=false
+scm.username=Santy288
 preparationGoals=clean verify
+scm.releaseCommitComment=@{prefix} prepare release @{releaseLabel}
+exec.pomFileName=pom.xml
+project.scm.guru.springframework\:my-pet-clinic.tag=my-pet-clinic-0.0.1
