--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<goals>install</goals>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
 		</plugins>
