--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>guru.springframework</groupId>
 	<artifactId>my-pet-clinic</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>my-pet-clinic</name>
 	<description>My Pet Clinic Project</description>
 	<packaging>pom</packaging>
@@ -40,6 +40,6 @@
 	<scm>
 		<connection>scm:git:https://Santy288@github.com/Santy288/my-pet-clinic.git</connection>
 		<developerConnection>scm:git:https://Santy288@github.com/Santy288/my-pet-clinic.git</developerConnection>
-	  <tag>my-pet-clinic-0.0.1</tag>
+	  <tag>my-pet-clinic-0.0.2</tag>
   </scm>
 </project>
