--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>guru.springframework</groupId>
     <artifactId>my-pet-clinic</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.4-SNAPSHOT</version>
   </parent>
   <artifactId>pet-clinic-data</artifactId>
   <properties>
