--- a/release.properties
+++ b/release.properties
@@ -1,23 +1,30 @@
 #release configuration
-#Fri Apr 22 13:08:27 CEST 2022
+#Fri Apr 22 14:21:17 CEST 2022
 projectVersionPolicyId=default
+scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
+project.scm.guru.springframework\:pet-clinic-data.empty=true
+project.dev.guru.springframework\:my-pet-clinic=0.0.5-SNAPSHOT
+pinExternals=false
+project.rel.guru.springframework\:pet-clinic-web=0.0.4
+pushChanges=true
+project.scm.guru.springframework\:pet-clinic-web.empty=true
+project.dev.guru.springframework\:pet-clinic-web=0.0.5-SNAPSHOT
+project.dev.guru.springframework\:pet-clinic-data=0.0.5-SNAPSHOT
 scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
 releaseStrategyId=default
-scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
-project.scm.guru.springframework\:pet-clinic-data.empty=true
-pinExternals=false
-completedPhase=check-poms
+completedPhase=run-preparation-goals
 scm.url=scm\:git\:https\://Santy288\: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@github.com/Santy288/my-pet-clinic.git
 scm.developmentCommitComment=@{prefix} prepare for next development iteration
 project.scm.guru.springframework\:my-pet-clinic.connection=scm\:git\:https\://Santy288\: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@github.com/Santy288/my-pet-clinic.git
 project.scm.guru.springframework\:my-pet-clinic.developerConnection=scm\:git\:https\://Santy288\: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@github.com/Santy288/my-pet-clinic.git
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-project.scm.guru.springframework\:pet-clinic-web.empty=true
+scm.tag=my-pet-clinic-0.0.4
+project.rel.guru.springframework\:pet-clinic-data=0.0.4
 exec.snapshotReleasePluginAllowed=false
+project.rel.guru.springframework\:my-pet-clinic=0.0.4
 preparationGoals=clean verify
-scm.releaseCommitComment=@{prefix} prepare release @{releaseLabel}
 exec.pomFileName=pom.xml
+scm.releaseCommitComment=@{prefix} prepare release @{releaseLabel}
 project.scm.guru.springframework\:my-pet-clinic.tag=my-pet-clinic-0.0.5
